--- a/package.json
+++ b/package.json
@@ -4,16 +4,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
     "vue": "^3.2.6"
   },
   "devDependencies": {
+    "@types/node": "^16.7.6",
+    "@types/webpack-env": "^1.16.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.0.5",
-    "typescript": "^4.3.2",
+    "eslint": "^7.32.0",
+    "eslint-plugin-modules-newline": "^0.0.6",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "eslint-plugin-vue": "^7.17.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.2",
     "vite": "^2.5.1",
+    "vite-plugin-eslint": "^1.3.0",
     "vue-tsc": "^0.2.2"
   }
 }
