--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "module": "CommonJS",
-    "lib": [
-      "DOM",
-      "ES2020"
-    ],
-    "outDir": "dist",
-    "esModuleInterop": true,
-    "sourceMap": true,
-    "declaration": true,
-    "skipLibCheck": true
+    "target": "esnext",
+    "module": "esnext",
+    "strict": true,
+    "jsx": "preserve",
+    "moduleResolution": "node"
   }
 }
