--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-modules-newline": "^0.0.6",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-vue": "^7.17.0",
+    "sass": "^1.38.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.2",
     "vite": "^2.5.1",
