--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
+    "@mdi/js": "^5.9.55",
+    "mdi-vue": "^3.0.7",
     "vue": "^3.2.6"
   },
   "devDependencies": {
